fixed missaligned services on wrap

--- a/frontend/designs/appfactory/css/style.css
+++ b/frontend/designs/appfactory/css/style.css
@@ -174,9 +174,6 @@ section.scrollbar .container::after {
 .services {
     border-bottom: 6px solid #fff;
 }
-section.services .container {
-    display: block;
-}
 
 .services .container h1 {
     font-size: 30px;
@@ -202,8 +199,9 @@ section.services .container {
 .services ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-bottom: 23px;
+    column-gap: 20px;
 }
 .services ul li {
     position: relative;
@@ -215,9 +213,6 @@ section.services .container {
     margin-bottom: 11px;
     margin-left: 70px;
     text-transform: capitalize;
-}
-.services ul li:not(:first-child, :nth-child(4)) {
-    margin-left: 90px;
 }
 .services ul li::before {
     position: absolute;
